--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -749,7 +749,7 @@ tapping PIN.</string>
             </objects>
             <point key="canvasLocation" x="3742" y="-732"/>
         </scene>
-        <!--Screen4 View Controller-->
+        <!--My Treatment Plan-->
         <scene sceneID="d17-gw-30L">
             <objects>
                 <viewController id="tM6-5p-iul" customClass="Screen4ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
@@ -879,7 +879,7 @@ tapping PIN.</string>
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
-                                            <segue destination="IUw-LH-sLs" kind="show" id="rcD-LN-hkq"/>
+                                            <segue destination="iIa-4e-CJd" kind="show" id="rcD-LN-hkq"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7eX-t9-ObG">
@@ -892,6 +892,9 @@ tapping PIN.</string>
                                         <state key="normal" title="    Home" image="home-icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="AXT-cV-4Ah" kind="show" id="GCy-I1-OTQ"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAX-Cr-vR9">
                                         <rect key="frame" x="0.0" y="0.0" width="350" height="184"/>
@@ -942,7 +945,7 @@ tapping PIN.</string>
                         <viewLayoutGuide key="safeArea" id="oce-Tb-gh9"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="Vtd-gq-JvC">
+                    <navigationItem key="navigationItem" title="My Treatment Plan" id="Vtd-gq-JvC">
                         <barButtonItem key="rightBarButtonItem" systemItem="organize" id="jxS-2a-sOZ">
                             <connections>
                                 <action selector="menuButton:" destination="tM6-5p-iul" id="Hfp-BY-968"/>
@@ -958,7 +961,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhW-fP-drE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6190" y="1491"/>
+            <point key="canvasLocation" x="6409" y="1457"/>
         </scene>
         <!--My Treatment Plan-->
         <scene sceneID="71E-jk-woD">
@@ -1042,7 +1045,7 @@ tapping PIN.</string>
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
-                                            <segue destination="IUw-LH-sLs" kind="show" id="dlU-hg-WeK"/>
+                                            <segue destination="iIa-4e-CJd" kind="show" id="dlU-hg-WeK"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9so-cI-tGk">
@@ -1119,7 +1122,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f2A-UR-zay" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2344.8000000000002" y="1333.5832083958021"/>
+            <point key="canvasLocation" x="2742" y="3160"/>
         </scene>
         <!--My Tips and Information-->
         <scene sceneID="acg-xf-R0c">
@@ -1130,7 +1133,7 @@ tapping PIN.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3gJ-2l-8xV">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tipCell" rowHeight="60" id="EY3-wl-NRX" customClass="TIpsTableViewCell" customModule="MyDailyPal" customModuleProvider="target">
@@ -1249,6 +1252,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      My Tips and Information" image="book_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="iIa-4e-CJd" kind="show" id="a2N-mc-jF8"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zsc-Yo-MLv">
                                         <rect key="frame" x="0.0" y="194" width="350" height="45"/>
@@ -1329,7 +1335,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xOF-wC-kpi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3420" y="2238.530734632684"/>
+            <point key="canvasLocation" x="4398" y="2239"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="S8z-fW-N8C">
@@ -1425,7 +1431,7 @@ tapping PIN.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eyI-Ps-zuu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3983" y="1334"/>
+            <point key="canvasLocation" x="2022" y="3160"/>
         </scene>
         <!--MyDailyPal Tip-->
         <scene sceneID="df4-dP-wAF">
@@ -1468,7 +1474,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdC-je-QMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4708" y="2239"/>
+            <point key="canvasLocation" x="5329" y="2238"/>
         </scene>
         <!--Setup New Treatment-->
         <scene sceneID="9MB-7G-jee">
@@ -1784,6 +1790,24 @@ tapping PIN.</string>
             </objects>
             <point key="canvasLocation" x="5382.3999999999996" y="1491.4542728635683"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uC7-WZ-7km">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iIa-4e-CJd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="K4b-NP-W3L">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IUw-LH-sLs" kind="relationship" relationship="rootViewController" id="Aui-sS-aZl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Re-Ff-sby" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3419.1999999999998" y="2238.08095952024"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Loading-welcome screen image" width="3333" height="5000"/>
@@ -1797,8 +1821,8 @@ tapping PIN.</string>
         <image name="timer" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AAy-rd-YxM"/>
-        <segue reference="rcD-LN-hkq"/>
+        <segue reference="a2N-mc-jF8"/>
+        <segue reference="etO-aC-p2M"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
 </document>
